kubernetes/spark-master-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: spark-master
spec:
  type: NodePort
  ports:
    - name: webui
      port: 8080
      nodePort: 30220
      targetPort: 8080
    - name: spark
      port: 7077
      targetPort: 7077
  selector:
    component: spark-master
