kubernetes/zeppelin-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: zeppelin
spec:
  ports:
    - port: 80
      nodePort: 30221
      targetPort: 8080
  selector:
    component: zeppelin
  type: NodePort
