kubernetes/minikube-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minikube-ingress
  annotations:
spec:
  rules:
#  - host: spark-kubernetes
  -  http:
      paths:
      - path: /spark/
        backend:
          serviceName: spark-master
          servicePort: 8080
